fix: modal align and navbar z-index

--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -1,15 +1,23 @@
 @use "../../assets/styles/mixin" as *;
 
-$duration: 0.6s;
+$duration: 0.5s;
 
 .wrapper {
-    background-color: aqua;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    // background-color: #00ffff;
     &__overlay {
         background-color: rgba(255, 255, 255, 0);
         backdrop-filter: blur(5px);
         position: absolute;
         top: 0;
         left: 0;
+        right: 0;
+        bottom: 0;
         height: 100vh;
         width: 100vw;
         z-index: 100;
@@ -55,6 +63,68 @@ $duration: 0.6s;
     }
 }
 
+.modal {
+    z-index: 10000;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #0000000d;
+    position: fixed;
+    margin: auto auto;
+    height: 100%;
+    width: 100%;
+    z-index: 50;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__open {
+        animation: blurEnter $duration linear both;
+    }
+    &__close {
+        animation: blurLeave $duration linear both;
+    }
+    &__inner {
+        box-sizing: border-box;
+        background-color: #fff;
+        @media (max-width: 768px) {
+            width: 100%;
+            height: 100%;
+        }
+        @media (min-width: 768px) {
+            width: 50%;
+            max-height: 70%;
+        }
+        border-radius: 10px;
+        padding: 15px 25px 40px;
+        transform: translateY(-100%);
+        &__open {
+            animation: scaleFadeInEnter 0.6s linear both;
+        }
+        &__close {
+            animation: scaleFadeInLeave 0.6s linear both;
+        }
+
+        &__header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            &__title {
+                color: #05c26a;
+                letter-spacing: 1px;
+                font-size: 1.5rem;
+            }
+        }
+        &__body {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+}
+
 @keyframes scaleFadeIn {
     0% {
         transform: translateY(-100%) scale(0.1);
@@ -72,6 +142,44 @@ $duration: 0.6s;
     }
     100% {
         transform: translateY(-100%) scale(0.1);
+        opacity: 0;
+    }
+}
+
+@keyframes blurEnter {
+    0% {
+        backdrop-filter: blur(0px);
+    }
+    100% {
+        backdrop-filter: blur(3px);
+    }
+}
+@keyframes blurLeave {
+    0% {
+        backdrop-filter: blur(0px);
+    }
+    100% {
+        backdrop-filter: blur(3px);
+    }
+}
+
+@keyframes scaleFadeInEnter {
+    0% {
+        transform: translateY(-150%) scale(0.1);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+    }
+}
+@keyframes scaleFadeInLeave {
+    0% {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-150%) scale(0.2);
         opacity: 0;
     }
 }
