--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -15,7 +15,7 @@
   padding: 0 10px;
   position: sticky !important;
   top: 0 !important;
-  z-index: 100;
+  z-index: 10;
   user-select: none;
   &__desktop_buttons {
     @include mobile {
